--- a/tiny/home.html
+++ b/tiny/home.html
@@ -1,7 +1,6 @@
 <html>
 <head><title>test</title></head>
 <body> 
-<img align="middle" src="godzilla.gif">
-Dave O'Hallaron
+<video src="dontdie.mp4" muted autoplay></video>
 </body>
 </html>
